--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oregano&display=swap');
+
 html,
 body {
   padding: 0;
